--- a/styles/index.css
+++ b/styles/index.css
@@ -1,21 +1,86 @@
-@font-face {
-    font-family: 'super_lobster';
-    src: url(assets/fonts/super_lobster.woff2) format("woff2");
-    src: url(assets/fonts/super_lobster.woff) format("woff");
-    font-weight: bold;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Special+Gothic+Expanded+One&display=swap');
 
-.topnav {
-    background-color: #f2f2f2;
+.special-gothic-expanded-one-regular {
+    font-family: "Special Gothic Expanded One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }  
+
+.inconsolata-uniquifier {
+    font-family: "Inconsolata", monospace;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings:
+      "wdth" 100;
+  }
+
+div.topnav {
+    background-color: #ffffff;
     overflow: hidden;
   }
 
-.topnav a {
+div.topnav a {
     float: right;
-    color: #000;
+    color: rgb(245, 128, 101);
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 25px;
     text-decoration: none;
-    font-family: 'super_lobster';
+    font-family: "Special Gothic Expanded One";
     font-size: 24px;
+}
+
+div.topnav a:hover {
+    color: rgb(246, 175, 159);
+}
+
+h1 {
+    color: #ffffff;
+    font-family: "Special Gothic Expanded One";
+    font-size: 60px;
+    text-align: center;
+}
+
+div.about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    flex: 1;
+    gap: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+div.about .text {
+    color: #ffffff;
+    font-family: "Inconsolata";
+    font-size: 25px;
+    text-align: center;
+}
+
+div.about .image {
+    height: auto;
+    width: auto;
+}
+
+div.bottomnav {
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+div.bottomnav a {
+    float: right;
+    color: #ffffff;
+    text-align: center;
+    padding: 8px 15px;
+    text-decoration: none;
+    font-family: "Special Gothic Expanded One";
+    font-size: 16px;
+}
+
+div.bottomnav a:hover {
+    color: rgb(246, 175, 159);
 }
