--- a/styles/home.css
+++ b/styles/home.css
@@ -45,18 +45,18 @@ div.about {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 80%;
+    width: 70%;
     flex: 1;
     gap: 20px;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 15%;
+    margin-right: 15%;
 }
 
 div.about .text {
     color: #ffffff;
     font-family: "Inconsolata";
-    font-size: 25px;
-    text-align: center;
+    font-size: 30px;
+    text-align: left;
 }
 
 div.about .image {
